[gd_scene load_steps=3 format=1]

[ext_resource path="res://Field.gd" type="Script" id=1]
[ext_resource path="res://Field_type.gd" type="Script" id=2]

[node name="Field" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = 0.0
margin/right = 396.0
margin/bottom = 349.0
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 159.0
margin/top = 5.0
margin/right = 222.0
margin/bottom = 19.0
text = "New Field"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Field_Name" type="TextEdit" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 154.0
margin/top = 41.0
margin/right = 307.0
margin/bottom = 65.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label" type="Label" parent="Field_Name"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -80.0
margin/top = 5.0
margin/right = -7.0
margin/bottom = 19.0
text = "Field Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Field_Type" type="OptionButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 156.0
margin/top = 74.0
margin/right = 309.0
margin/bottom = 98.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="Field_Type"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -80.0
margin/top = 5.0
margin/right = -7.0
margin/bottom = 19.0
text = "Field Type"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Extras" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 73.0
margin/top = 118.0
margin/right = 113.0
margin/bottom = 158.0

[node name="AddField" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 298.0
margin/top = 4.0
margin/right = 386.0
margin/bottom = 24.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Field"
flat = false

[node name="Cancel" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false


